--- a/app/views/microposts/_microposts.html.erb
+++ b/app/views/microposts/_microposts.html.erb
@@ -12,6 +12,7 @@
          <p><%= micropost.content %></p>
        </div>
        <div>
+         <%= render 'likemicroposts/like_button', micropost: micropost %>
          <% if current_user == micropost.user %>
            <%= link_to "Detele", micropost, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-sx' %>
          <% end %>
